--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     compile group: 'com.opencsv', name: 'opencsv', version: '4.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     compile group: 'mysql', name: 'mysql-connector-java', version:'5.1.49'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
 }
