--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     compile group: 'mysql', name: 'mysql-connector-java', version:'5.1.49'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.0'
 }
